# DistributedRaytracer

./: README.md
RayTracer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  jsonexample  raytracer  vectorexample
RayTracer/cameras/: Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
RayTracer/core/: Camera.cpp  Camera.h  LightSource.h  Material.h  Parser.h  RayHitStructs.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Texture.h
RayTracer/examples/: jsonexample  test.json
RayTracer/lights/: AreaLight.cpp  AreaLight.h  PointLight.cpp  PointLight.h
RayTracer/main/: main.cpp
RayTracer/materials/: BlinnPhong.cpp  BlinnPhong.h
RayTracer/shapes/: BVH.h  BoundingBox.cpp  BoundingBox.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h  TriMesh.cpp  TriMesh.h  Triangle.cpp  Triangle.h
RayTracer/tests/: tri_mesh_test.json  tri_mesh_test.ppm
RayTracer/textures/: CheckerTexture.cpp  CheckerTexture.h  ColourTexture.cpp  ColourTexture.h  ConstantTexture.cpp  ConstantTexture.h  ImageTexture.cpp  ImageTexture.h
